Correction dans le HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <hr>	
 <input id="email" placeholder="email" data-validetta="required,email">
 <br>
-<input id="mdp" name="mdp" placeholder="Mot de passe" data-validetta="required,minLenght[3]">
+<input id="mdp" name="mdp" placeholder="Mot de passe" data-validetta="required,minLength[3]">
 	
 <input id="mdp2" name="mdp2" placeholder="Confirmez mot de passe" data-validetta="required,equalTo[mdp]">
 <br>
