--- a/index.html
+++ b/index.html
@@ -2,37 +2,45 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Formulaire Bootstrap</title>
+<title>Formulaire Validetta</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-<div class="container">
-<div class="row">
-<form class="form-group col-6" id="form-inscription">
-<input class="form-control" id="nom" placeholder="Votre nom">
-<input class="form-control" id="prenom" placeholder="Votre prénom">
-<input class="form-control" id="datepicker" placeholder="Votre date de naissance">
-<input class="form-control" id="cp" placeholder="Code postal">
-<input class="form-control" id="ville" placeholder="Ville">	
-<input class="form-control" id="email" placeholder="Votre adresse e-mail" data-validetta="required,email">
-<input class="form-control" id="mdp" name="mdp" placeholder="Mot de passe" data-validetta="required,minLength[3]">	
-<input class="form-control" id="mdp2" name="mdp2" placeholder="Confirmez mot de passe" data-validetta="required,equalTo[mdp]">
-<div class="form-check">
-<input class="form-check-input" type="checkbox" name="conditions" data-validetta="required">
-<a class="form-check-label" href="conditionsgenerales.html">J'ai lu et accepte les conditions générales</a><br>
-</div>
-<button class="btn btn-primary" type="submit" id="submit">Envoyer</button>
-</form>
+	<div class="container">
+		<div class="row">
+			<div id="contenu"></div>
+			<div id="inscription" class="hidden col-12 btn btn-secondary" role="button">S'inscrire</div>
+			<div id="connexion" class="col-12 btn btn-secondary" role="button">Se connecter</div>
+			<form class="form-group col-12" id="form-inscription" data-validetta="required">
+				<input class="form-control" id="nom" placeholder="Votre nom" data-validetta="required">
+				<input class="form-control" id="prenom" placeholder="Votre prénom" data-validetta="required">
+				<input class="form-control" id="datepicker" placeholder="Votre date de naissance" data-validetta="required">
+				<input class="form-control" id="cp" placeholder="Code postal" data-validetta="required">
+				<input class="form-control" id="ville" placeholder="Ville" data-validetta="required">	
+				<input class="form-control" id="email" placeholder="Votre adresse e-mail" data-validetta="required,email">
+				<input class="form-control" id="mdp" name="mdp" placeholder="Mot de passe" data-validetta="required,minLength[3]">	
+				<input class="form-control" id="mdp2" name="mdp2" placeholder="Confirmez mot de passe" data-validetta="required,equalTo[mdp]">
+				<div class="form-check">
+					<input class="form-check-input" type="checkbox" name="conditions" data-validetta="required">
+					<a class="form-check-label" href="conditionsgenerales.html">J'ai lu et accepte les conditions générales</a><br>
+				</div>
+				<button class="btn btn-primary" type="submit" id="submit">Envoyer</button>
+			</form>
+			<!--/form-inscription-->
 	
-<form class="col-6" id="form-connexion">
-<input class="form-control" id="emailcon" placeholder="Votre adresse e-mail" data-validetta="required,email">
-<input class="form-control" id="mdpcon" name="mdpcon" placeholder="Votre mot de passe" data-validetta="required">
-<a class="form-check-label" href="mdpoublie.html">Mot de passe oublié?</a><br>
-<button class="btn btn-primary" type="submit" id="connexion">Envoyer</button>
-</form>
-</div>
-</div>
+			<form class="hidden col-12" id="form-connexion">
+				<input class="form-control" id="emailcon" placeholder="Votre adresse e-mail" data-validetta="required,email">
+				<input class="form-control" id="mdpcon" name="mdpcon" placeholder="Votre mot de passe" data-validetta="required">
+				<a class="form-check-label" href="mdpoublie.html">Mot de passe oublié?</a><br>
+				<button class="btn btn-primary" type="submit" id="connexion">Envoyer</button>
+			</form>
+			<!--/form-connexion-->
+		</div>
+		<!--/row-->
+	</div>
+	<!--/container-->
 
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
