--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
 			</div>
 			<hr>
 			<form class="form-group col-12 p-4" id="form-inscription" data-validetta="required">
-				<h1 class="text-center col-12">Inscription</h1>
-				<div><input class="form-control" id="nom" placeholder="Votre nom" data-validetta="required"></div>
-				<div><input class="form-control" id="prenom" placeholder="Votre prénom" data-validetta="required"></div>
-				<div><input class="form-control" id="datepicker" placeholder="Votre date de naissance" data-validetta="required"></div>
-				<div><input class="form-control" id="cp" placeholder="Votre code postal" data-validetta="required"></div>
-				<div><input class="form-control" id="ville" placeholder="Votre ville" data-validetta="required"></div>	
-				<div><input class="form-control" id="email" placeholder="Votre adresse e-mail" data-validetta="required,email"></div>
-				<div><input class="form-control" id="mdp" name="mdp" placeholder="Votre mot de passe" data-validetta="required,minLength[3]">	</div>
-				<div><input class="form-control" id="mdp2" name="mdp2" placeholder="Confirmez votre mot de passe" data-validetta="required,equalTo[mdp]"></div>
+				<h1 class="text-center col-12 mb-4">Inscription</h1>
+				<div><input class="mb-3 form-control" id="nom" placeholder="Votre nom" data-validetta="required"></div>
+				<div><input class="mb-3 form-control" id="prenom" placeholder="Votre prénom" data-validetta="required"></div>
+				<div><input class="mb-3 form-control" id="datepicker" placeholder="Votre date de naissance" data-validetta="required"></div>
+				<div><input class="mb-3 form-control" id="cp" placeholder="Votre code postal" data-validetta="required"></div>
+				<div><input class="mb-3 form-control" id="ville" placeholder="Votre ville" data-validetta="required"></div>	
+				<div><input class="mb-3 form-control" id="email" placeholder="Votre adresse e-mail" data-validetta="required,email"></div>
+				<div><input class="mb-3 form-control" id="mdp" name="mdp" placeholder="Votre mot de passe" data-validetta="required,minLength[3]">	</div>
+				<div><input class="mb-3 form-control" id="mdp2" name="mdp2" placeholder="Confirmez votre mot de passe" data-validetta="required,equalTo[mdp]"></div>
 				<div class="form-check">
 					<input class="form-check-input" type="checkbox" name="conditions" data-validetta="required">
 					<a class="form-check-label" href="conditionsgenerales.html">J'ai lu et accepte les conditions générales</a><br>
 				</div>
 				<div class="p-3 row">
-					<button class="btn btn-primary col-6" type="submit" id="submit">Envoyer</button>
+					<button class="btn btn-primary col-6" type="submit" id="submit">S'inscrire</button>
 					<button class="btn btn-warning col-6" type="reset" id="reset">Annuler</button>
 				</div>
 			</form>
 			<!--/form-inscription-->
 	
 			<form class="form-group hidden p-4 col-12" id="form-connexion">
-				<h1 class="text-center">Connection</h1>
-				<div><input class="form-control" id="emailcon" placeholder="Votre adresse e-mail" data-validetta="required,email"></div>
-				<div><input class="form-control" id="mdpcon" name="mdpcon" placeholder="Votre mot de passe" data-validetta="required"></div>
+				<h1 class="text-center col-12 mb-4">Connection</h1>
+				<div><input class="form-control mb-3" id="emailcon" placeholder="Votre adresse e-mail" data-validetta="required,email"></div>
+				<div><input class="form-control mb-3" id="mdpcon" name="mdpcon" placeholder="Votre mot de passe" data-validetta="required"></div>
 				<a class="form-check-label" href="mdpoublie.html">Mot de passe oublié?</a><br>
 				<button class="my-3 col-12 btn btn-primary" type="submit" id="submit-connexion">Se connecter</button>
 			</form>
