--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="p-3 row">
 					<button class="btn btn-primary col-6" type="submit" id="submit">S'inscrire</button>
-					<button class="btn btn-warning col-6" type="reset" id="reset">Annuler</button>
+					<button class="btn btn-primary btn-annuler col-6" type="reset" id="reset">Annuler</button>
 				</div>
 			</form>
 			<!--/form-inscription-->
