--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<div class="container">
 		<div class="row">
 			<div id="contenu"></div>
+		</div>
+	</div>
+	<div class="container formulaire-comp">
+		<div class="row">
 			<div class="mt-5 p-0 col-12 text-center">
 				<div id="inscription" class="hidden btn btn-secondary" role="button">Inscrivez-vous</div>
 				<div id="connexion" class="btn btn-secondary" role="button">Connectez-vous</div>
